# eww-config

./: eww.scss  eww.yuck
scripts/: get-audio  get-date.sh  get-time.sh  get-workspaces  is-online.sh  set-audio.sh
scripts/src/: Cargo.toml
