[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.9.1"
hyprland = "0.4.0-alpha.3"
regex = "1.9.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[[bin]]
name = "get-audio"
path = "./bin/get-audio.rs"

[[bin]]
name = "get-workspaces"
path = "./bin/get-workspaces.rs"
